# fishsense-services

./: .dockerignore  .env  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
env/: pyvenv.cfg
fishsense_services/: __main__.py  app.py
fishsense_services/helper/: fish_helper.py  usr_helper.py
fishsense_services/routes/files/: file_helper.py  file_routes.py
fishsense_services/routes/img/: img.py
fishsense_services/routes/processing/: fish.py  img_routes.py  laser_cal.py  laser_routes.py
fishsense_services/routes/usr/: login.py  login_routes.py  org_routes.py  user_routes.py  usr.py
tests/: test_module.py
