[tool.poetry]
name = "fishsense_services"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
google-auth = "^2.35.0"
requests = "^2.32.3"
uvicorn = "^0.32.0"
psycopg2-binary = "2.9.10"
backoff = "^2.2.1"
gitpython = "^3.1.43"
boto3 = "^1.35.54"
python-multipart = "^0.0.17"
pyjwt = "^2.10.1"
authlib = "^1.3.0"
httpx = "^0.27.0" 


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
